--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@ https://templatemo.com/tm-543-breezed
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Trang Chủ</a></li>
-                            <li class="scroll-to-section"><a href="#about">Nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak</a></li>
-                            <li class="scroll-to-section"><a href="#projects">Giới thiệu về Repo</a></li>
-                            <li class="scroll-to-section"><a href="#tool">Công cụ và tiện ích</a></li>
+                            <li class="scroll-to-section"><a href="#about">Giới thiệu chung</a></li>
+                            <li class="scroll-to-section"><a href="#tool">Công cụ và Tiện ích</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -124,15 +123,10 @@ https://templatemo.com/tm-543-breezed
                             <br>
                             Nhóm Chia Sẻ Kinh Nghiệm iOS Và Jailbreak tạo ra nhằm giúp mọi người có thể trao đổi với nhau, chia sẽ những Tweak hay, những setup đẹp, học hỏi thêm kinh nghiệm về Jailbreak.
                             <br>
-                          <section class="section" id="projects">
-                            <div class="container">
-            <div class="row">
-                    <div class="left-text-content">
-                        <div class="section-heading">
                             <br>
                              <h6>Giới thiệu về Repo của NDK</h6>
                             <br>
-                            Repo của NDK là nơi lưu trữ các Tweak hay được việt hoá sẵn,ngoài ra còn có Theme và Wigdet đẹp.
+                            Repo của NDK là nơi lưu trữ các Tweak hay được Việt Hoá sẵn,ngoài ra còn có Theme và Wigdet đẹp.
                         </div>
                         <div class="container">
                             <div class="row">
