--- a/jailbreak/NDKStore/NDK.html
+++ b/jailbreak/NDKStore/NDK.html
@@ -114,5 +114,27 @@
                         <h1>TestFlight</h1>
 </div>
 <p style="text-align:center;"><a>Copyright © Team TQM❤️™ 2021</a>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
+
+    <script>
+      new Darkmode({
+        bottom: '32px',
+        right: '32px',
+        time: '0.5s',
+        label: '🌓'
+      }).showWidget();
+    </script>
   </body>
 </html>
