--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ https://templatemo.com/tm-543-breezed
                <h3>
 <h3>
                   <a href="https://ndk-jailbreak.github.io/jailbreak/" class="main-stroked-button"> NDK Store</a>
-               <h3>                   <h3>Nguồn của Nguyễn Đình Khanh</h3>
+               <h3>                 
+                 <marquee direction="right">NGUỒN CỦA NGUYỄN ĐÌNH KHANH - VUI LÒNG KHÔNG SAO CHÉP! (direction="right")</marquee>
                 </div>
               </div>
             </div>          
