--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ https://templatemo.com/tm-543-breezed
 <h3>
                   <a href="https://ndk-jailbreak.github.io/jailbreak/" class="main-stroked-button"> NDK Store</a>
                <h3>                 
-                 <marquee direction="right">NGUỒN CỦA NGUYỄN ĐÌNH KHANH - VUI LÒNG KHÔNG SAO CHÉP! (direction="right")</marquee>
+                 <marquee direction="right">NGUỒN CỦA NGUYỄN ĐÌNH KHANH - VUI LÒNG KHÔNG SAO CHÉP!</marquee>
                 </div>
               </div>
             </div>          
