--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ https://templatemo.com/tm-543-breezed
 <h3>
                   <a href="https://ndk-jailbreak.github.io/jailbreak/" class="main-stroked-button"> NDK Store</a>
                <h3>                 
-                 <marquee>NGUỒN CỦA NGUYỄN ĐÌNH KHANH - VUI LÒNG KHÔNG SAO CHÉP!</marquee>
+                 <marquee>NGUỒN CỦA NGUYỄN ĐÌNH KHANH - VUI LÒNG KHÔNG SAO CHÉP! - AI LẤY LÀ S.U.C.V.A.T VÀ O.C.C.U.T!!!</marquee>
                 </div>
               </div>
             </div>          
@@ -146,30 +146,7 @@ https://templatemo.com/tm-543-breezed
 
                             <br>
              <p style="text-align:center;"><img src="info/System/Images/Repo.png"style="width:100%;height:auto;">
-    15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Pacman</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="pacman.css">
-  <script src="main.js"></script>
-</head>
-<body>
+    
   <div class="main">
     <div>
       <div class="pacman1">
