--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-543-breezed
             •VIDEO HƯỚNG DẪN:
              <br>
              <br>
-			     <a href="https://youtu.be/Xs6v-9_ST7M" class="btn">Hướng Dẫn</a>
+			     <iframe width="560" height="315" src="https://www.youtube.com/embed/K0OMIW49NfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 &nbsp;
              <br>
                         </div>
