--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ https://templatemo.com/tm-543-breezed
                   <a href="https://www.facebook.com/groups/chiasekinhnghiemiosjailbreak/" class="main-stroked-button">Tham Gia</a>
                <h3>
 <h3>
-                  <a href="https://ndk-jailbreak.github.io/jailbreak/" class="main-stroked-button"> NDK Store</a>
+                  <a href="https://ndk-jailbreak.github.io/jailbreak/" class="main-stroked-button">Jailbreak</a>
                <h3>                 
                  <marquee>NGUỒN CỦA NGUYỄN ĐÌNH KHANH - VUI LÒNG KHÔNG SAO CHÉP!</marquee>
                 </div>
