--- a/info/callassistbar/index.html
+++ b/info/callassistbar/index.html
@@ -44,19 +44,22 @@ Khi cài vào là sử dụng được ngay.
 
 <li>
 
-Phát hành lần đầu.
+Fix lỗi bị mất chữ cho máy màn hình nhỏ. 
 </li>
 
+<li>
+Thêm chức năng rung khi người nghe ở bên kia bắt máy (chỉ có tác dụng với cuộc gọi đi).
+</li>
 </panel-body></panel> <panel class="modern info-panel"><panel-header><ttp class="name">Thông tin</ttp></panel-header><panel-body class="pb-0"><table style="margin-top: -20px;" class="information mt-1" cols="2" border="0"><tbody>
 
 <tr><td>Phiên bản</td><td>
 
-1.0
+1.0.1
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-19/10/2021
+20/10/2021
 
 </td></tr>
 <tr><td>Dung lượng</td><td>
@@ -66,7 +69,7 @@ Phát hành lần đầu.
 </td></tr>
 <tr><td>Hỗ trợ IOS</td><td>
 
-11.0 - 14.8
+12.0 - 14.8
 
 
 
