--- a/info/13HUD/index.html
+++ b/info/13HUD/index.html
@@ -22,7 +22,7 @@ Mang thanh điều chỉnh âm lượng của iOS 13, 14.
 
 <li>
 
-Sửa lỗi và thêm một số tính năng mới.
+Thêm Icon cho Tweak trong Cài Đặt.
 
 </li>
 
@@ -30,12 +30,12 @@ Sửa lỗi và thêm một số tính năng mới.
 
 <tr><td>Phiên bản</td><td>
 
-1.0.1
+1.0.1-1
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-20/08/2021
+21/10/2021
 
 </td></tr>
 <tr><td>Dung lượng</td><td>
