--- a/info/pockettranslator/index.html
+++ b/info/pockettranslator/index.html
@@ -12,6 +12,10 @@ Giúp dịch ngôn ngữ tự động, sau khi nhấn đúp vào nút nguồn, b
 
 <li><a target="_blank" href="Screenshots/1.jpg?size=full">
 <img src="Screenshots/1.jpg?size=medium"/></a></li>
+  
+  
+<li><a target="_blank" href="Screenshots/2.jpg?size=full">
+<img src="Screenshots/2.jpg?size=medium"/></a></li>
 
 
 </ul></panel-body></panel>
