--- a/info/pockettranslator/index.html
+++ b/info/pockettranslator/index.html
@@ -22,28 +22,19 @@ Giúp dịch ngôn ngữ tự động, sau khi nhấn đúp vào nút nguồn, b
 <panel-header><label><panel style="margin-top: -14px;" class="modern changes-panel"><ttp class="name">Nội dung cập nhật</ttp></label></panel-header><panel-body style="margin-top: -10px;"><span class="change-content">
 
 <li>
-Loại bỏ cử chỉ nhấn đúp nút ngồn để dịch.
+Cửa sổ phiên dịch giờ đây có thể được di chuyển tự do xung quanh màn hình bằng cách kéo ngón tay của bạn.
 </li>
 <li>
-Thêm mo- đun CC (CC module) vào trung tâm kiểm soát để dịch dễ hơn.
+Đã xoá và fix bớt mã.
 </li>
 <li>
-Thêm hỗ trợ Activator.
-</li>
-<li>
-Thêm 'kéo để làm mới' vào cửa sổ dịch.
-</li>
-<li>
-Sửa lỗi nhỏ.
-</li>
-<li>
-Hỗ trợ thêm cho trình dịch DeepL.    
+Thêm 1 tính năng sau cửa sổ, giúp dịch dễ hơn...
 </li>
 </panel-body></panel> <panel class="modern info-panel"><panel-header><ttp class="name">Thông tin</ttp></panel-header><panel-body class="pb-0"><table style="margin-top: -20px;" class="information mt-1" cols="2" border="0"><tbody>
 
 <tr><td>Phiên bản</td><td>
 
-1.1
+1.2
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
