--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@ https://templatemo.com/tm-543-breezed
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
+                <a href="https://drive.google.com/file/d/1u3L8Yi8q0_m3VP72iE-MhS7GPn4JOOsH/view?fbclid=IwAR2ym1uxfUiNDX6qZgopVx-hQEusmYoSwuQUKkbLyUX-tpPHvTBJ4snVXlE" class="btn">Fugu14</a>
+                &nbsp;
                 <a href="https://ongcenh.github.io/TQM/checkra1n" class="btn">Checkra1n for Android</a>
                 &nbsp;
                 <a href="https://ongcenh.github.io/TQM/uncover" class="btn">Xoá Jailbreak trên Unc0ver</a>
@@ -296,7 +298,7 @@ https://templatemo.com/tm-543-breezed
                 &nbsp;
                <a href="https://jbme.qwertyoruiop.com/fb.html" class="btn">JB Me 9.3.X 64Bit</a>
                 &nbsp;
-        <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/TestFlight.plist"class="btn">TestFlight iOS 12</a>
+                <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/TestFlight.plist"class="btn">TestFlight iOS 12</a>
                 &nbsp;
                 <a href="https://ongcenh.github.io/TQM/fixlib" class="btn">Fix lib iOS 9 - 10</a>
                 &nbsp;
@@ -330,7 +332,7 @@ https://templatemo.com/tm-543-breezed
                 <a href="https://drive.google.com/file/d/1xYaAvCgy62pF7MOY98aVYhHE-NJ8qPmL/view?usp=drivesdk" class="btn">iPA Messenger Shark</a>
                 &nbsp;
                 <a href="https://drive.google.com/file/d/1eKuL3VQXhRTMdPEZrOO5v8hOBfFo2qCA/view?usp=drivesdk" class="btn">iPA Zalo 2</a>
-        &nbsp;
+                &nbsp;
                 <a href="https://www.mediafire.com/file/j8n2ghzfmnw56nu/Chinese.bytes/file" class="btn">File Tiếng Việt Game CDHT</a>                  </section>
     <!-- End Tool iDevice-->
     <!-- ***** Footer Start ***** -->
