--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -103,48 +103,59 @@ https://templatemo.com/tm-543-breezed
                             <br>
                             <h6>Hướng dẫn tạo USB Checkra1n</h6>
                             <br>
-                            ∙Bước 1:
-   				Tải phần mềm Rufus và phiên bản Checkra1n phù hợp với iPhone của bạn (lưu ý: Checkra1n chỉ hỗ trợ từ iPhone 5s-X iOS 12.0-14.7). 
+                            <li>Bước 1:</li>
+		            <br>
+   				-Tải phần mềm 3uTools và phiên bản Checkra1n phù hợp với iPhone của bạn (lưu ý: Checkra1n chỉ hỗ trợ từ iPhone 5s-X iOS 12.0-14.7). 
 			    <br>
-			     <a href="https://download.com.vn/rufus-73079" class="btn">Link Tải Rufus mới nhất</a>
+				-Đối với iPhone 5s và các dòng máy iPad chạy chip A7 thì sử dụng bản 0.10.2
+			     <a href="http://3u.com/" class="btn">Link Tải 3uTools</a>
                 &nbsp;
 			     <a href="https://github.com/asineth0/checkn1x/releases/tag/1.1.6" class="btn">Link Tải Checkra1n</a>
+                &nbsp;
+			    < href="https://www.dropbox.com/s/39far551iyvja6g/checkn1x-1.0.5-amd64_Checkra1n_0.10.2.iso?dl=0" class="btn">Link Tải Checkra1n 0.10.2</a>
                 &nbsp;
 			    <br>
 		 	    <br>
 			    <br>
-			    ∙Bước 2:
-                                Mở phần mềm Rufus và cắm USB vào màn hình sẽ hiện ra như thế này.
+			    <li>Bước 2:</li>
+		            <br>
+                                Mở phần mềm 3uTools và chọn vào phần Hộp Công Cụ sau đó chọn Jailbreak như ảnh.
 			    <br>
                              <img src="icons/1.png"style="width:40%;height:20%;">              
 			    <br>
 			    <br>
-			    ∙Bước 3:
-                                Chọn Select và chọn file Checkra1n cần Jailbreak.
+			    <li>Bước 3:</li>
+		            <br>
+                                Một hộp thoại hiện lên sau đó chọn Checkra1n.
                             <br>
 			    <br>
                              <img src="icons/2.png"style="width:40%;height:20%;">
 			    <br>
+				<li>Bước 4:</li>
+		            <br>
+			    Chọn USB của bạn và chọn file ISO Checkra1n (nếu cần thiết).
 			    <br>
-                             <img src="icons/3.png"style="width:50%;height:100%;">
+			    <li>Bước 5:</li>
+			    <br>
+			  Nhấn Start Making mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn).
 			    <br>
 			    <br>
-			    ∙Bước 4:
-				Nhấn Start mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn).
-			    <br>
-			    <br>
-			     <img src="icons/4.png"style="width:50%;height:100%;">
+			     <img src="icons/3.png"style="width:50%;height:100%;">
 			    <br>
 			    <br>
 				Và thế là xong!
 			    <br>
              <br>
-            •VIDEO HƯỚNG DẪN:
+            <li>VIDEO HƯỚNG DẪN (Dương iPhone)</li>
              <br>
              <br>
 			     <iframe width="560" height="315" src="https://www.youtube.com/embed/K0OMIW49NfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 &nbsp;
              <br>
+	    <li>HƯỚNG DẪN JAILBREAK IPHONE 5S BẰNG CHECKRA1N (Dương iPhone)</li>
+		<br>
+		<br>
+	        <iframe width="560" height="315" src="https://www.youtube.com/embed/vMx0wxu3Blk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="container">
                             <div class="row">
