--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -108,11 +108,13 @@ https://templatemo.com/tm-543-breezed
    				-Tải phần mềm 3uTools và phiên bản Checkra1n phù hợp với iPhone của bạn (lưu ý: Checkra1n chỉ hỗ trợ từ iPhone 5s-X iOS 12.0-14.7). 
 			    <br>
 				-Đối với iPhone 5s và các dòng máy iPad chạy chip A7 thì sử dụng bản 0.10.2
+				<br>
+				<br>
 			     <a href="http://3u.com/" class="btn">Link Tải 3uTools</a>
                 &nbsp;
 			     <a href="https://github.com/asineth0/checkn1x/releases/tag/1.1.6" class="btn">Link Tải Checkra1n</a>
                 &nbsp;
-			    < href="https://www.dropbox.com/s/39far551iyvja6g/checkn1x-1.0.5-amd64_Checkra1n_0.10.2.iso?dl=0" class="btn">Link Tải Checkra1n 0.10.2</a>
+			    <a href="https://www.dropbox.com/s/39far551iyvja6g/checkn1x-1.0.5-amd64_Checkra1n_0.10.2.iso?dl=0" class="btn">Link Tải Checkra1n 0.10.2</a>
                 &nbsp;
 			    <br>
 		 	    <br>
@@ -135,6 +137,7 @@ https://templatemo.com/tm-543-breezed
 		            <br>
 			    Chọn USB của bạn và chọn file ISO Checkra1n (nếu cần thiết).
 			    <br>
+			    <br>
 			    <li>Bước 5:</li>
 			    <br>
 			  Nhấn Start Making mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn).
@@ -152,6 +155,7 @@ https://templatemo.com/tm-543-breezed
 			     <iframe width="560" height="315" src="https://www.youtube.com/embed/K0OMIW49NfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 &nbsp;
              <br>
+	     <br>		
 	    <li>HƯỚNG DẪN JAILBREAK IPHONE 5S BẰNG CHECKRA1N (Dương iPhone)</li>
 		<br>
 		<br>
