--- a/info/topstt3xs/index.html
+++ b/info/topstt3xs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../System/Css/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả & Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-Đưa thanh trạng thái với những máy giả lập iPhones X nên trên ( về vị trí ban đầu ).
+Đưa thanh trạng thái với những máy giả lập iPhones X lên trên ( về vị trí ban đầu ).
 
   
 </span></li></lable><br>
