--- a/info/icarus/index.html
+++ b/info/icarus/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../System/Css/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả & Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-Một cách mới đáng kinh ngạc để chuyển đổi ứng dụng<br><br> <li> Ý tưởng và đồ họa tinh chỉnh ban đầu của <red> Devy Design.  <br><br> <li> Icarus là một bản đại tu hoàn chỉnh hệ thống cử chỉ đa nhiệm của iOS.  Nó thay thế trình chuyển đổi ứng dụng truyền thống bằng một trình chuyển đổi tùy chỉnh, có khả năng hơn nhiều so với iOS cổ phiếu.  Bằng cách sử dụng các cử chỉ hệ thống để tích hợp Icarus một cách trơn tru, việc sử dụng nó phải là bản chất thứ hai.<br><br> <li> <red> Các tính năng có sẵn<br><br> <blue> - Chọn từ 11 kiểu trình chuyển đổi khác nhau<br><br> - Hiển thị bản xem trước ứng dụng trực tiếp hoặc sử dụng giao diện mờ sạch<br><br> - Hiển thị, ẩn hoặc làm mờ một hàng biểu tượng đã mở<br><br> - Chọn một biểu tượng từ hàng ứng dụng để nhanh chóng chuyển sang thẻ của nó<br><br> - Sử dụng dấu chấm để hiển thị ứng dụng hiện tại<br><br> - Thêm nút hủy để nhanh chóng tắt tất cả các ứng dụng đang chạy, với khả năng xác nhận<br><br> - Cảm nhận từng hoạt ảnh với phản hồi xúc giác<br><br> - Định cấu hình các tùy chọn trực tiếp bằng cách nhấn và giữ trên bất kỳ thẻ ứng dụng nào, thông qua gói Cài đặt hoặc bằng cách sử dụng tiện ích Màn hình chủ của iOS 14 đi kèm.
+Một cách mới đáng kinh ngạc để chuyển đổi ứng dụng.<br><br> <li> Ý tưởng và đồ họa tinh chỉnh ban đầu của <red> Devy Design.  <br><br> <li> Icarus là một bản đại tu hoàn chỉnh hệ thống cử chỉ đa nhiệm của iOS.  Nó thay thế trình chuyển đổi ứng dụng truyền thống bằng một trình chuyển đổi tùy chỉnh, có khả năng hơn nhiều so với iOS cổ phiếu.  Bằng cách sử dụng các cử chỉ hệ thống để tích hợp Icarus một cách trơn tru, việc sử dụng nó phải là bản chất thứ hai.<br><br> <li> <red> Các tính năng có sẵn<br><br> <blue> - Chọn từ 11 kiểu trình chuyển đổi khác nhau<br><br> - Hiển thị bản xem trước ứng dụng trực tiếp hoặc sử dụng giao diện mờ sạch<br><br> - Hiển thị, ẩn hoặc làm mờ một hàng biểu tượng đã mở<br><br> - Chọn một biểu tượng từ hàng ứng dụng để nhanh chóng chuyển sang thẻ của nó<br><br> - Sử dụng dấu chấm để hiển thị ứng dụng hiện tại<br><br> - Thêm nút hủy để nhanh chóng tắt tất cả các ứng dụng đang chạy, với khả năng xác nhận<br><br> - Cảm nhận từng hoạt ảnh với phản hồi xúc giác<br><br> - Định cấu hình các tùy chọn trực tiếp bằng cách nhấn và giữ trên bất kỳ thẻ ứng dụng nào, thông qua gói Cài đặt hoặc bằng cách sử dụng tiện ích Màn hình chủ của iOS 14 đi kèm.
 </span></li></lable><br>
 <ul class="screenshot-viewer">
 
@@ -41,7 +41,7 @@ Cải tiến, sửa lỗi.
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-/10/2021
+30/10/2021
 
 </td></tr>
 <tr><td>Dung lượng</td><td>
@@ -51,7 +51,7 @@ Cải tiến, sửa lỗi.
 </td></tr>
 <tr><td>Hỗ trợ IOS</td><td>
 
-14.0 - 148
+14.0 - 14.8
 
 
 
