--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -124,7 +124,7 @@ https://templatemo.com/tm-543-breezed
                                 Mở phần mềm 3uTools và chọn vào phần Hộp Công Cụ sau đó chọn Jailbreak như ảnh.
 			    <br>
 			    <br>
-                             <img src="icons/1.png"style="width:40%;height:20%;">              
+                              <p style="text-align:center;"><img src="icons/1.png"style="width:40%;height:20%;">              
 			    <br>
 			    <br>
 			    <li>Bước 3:</li>
@@ -132,7 +132,7 @@ https://templatemo.com/tm-543-breezed
                                 Một hộp thoại hiện lên sau đó chọn Checkra1n.
                             <br>
 			    <br>
-                             <img src="icons/2.png"style="width:40%;height:20%;">
+                              <p style="text-align:center;"><img src="icons/2.png"style="width:40%;height:20%;">
 			    <br>
 				<li>Bước 4:</li>
 		            <br>
@@ -144,7 +144,7 @@ https://templatemo.com/tm-543-breezed
 			  Nhấn Start Making mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn).
 			    <br>
 			    <br>
-			     <img src="icons/3.png"style="width:50%;height:100%;">
+			      <p style="text-align:center;"><img src="icons/3.png"style="width:50%;height:100%;">
 			    <br>
 			    <br>
 				Và thế là xong!
@@ -153,14 +153,14 @@ https://templatemo.com/tm-543-breezed
             <li>VIDEO HƯỚNG DẪN (Dương iPhone)</li>
              <br>
              <br>
-			     <iframe width="560" height="315" src="https://www.youtube.com/embed/K0OMIW49NfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			      <p style="text-align:center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/K0OMIW49NfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 &nbsp;
              <br>
 	     <br>		
 	    <li>HƯỚNG DẪN JAILBREAK IPHONE 5S BẰNG CHECKRA1N (Dương iPhone)</li>
 		<br>
 		<br>
-	        <iframe width="560" height="315" src="https://www.youtube.com/embed/vMx0wxu3Blk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	         <p style="text-align:center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/vMx0wxu3Blk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="container">
                             <div class="row">
