--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -150,14 +150,14 @@ https://templatemo.com/tm-543-breezed
 				Và thế là xong!
 			    <br>
              <br>
-            <li>VIDEO HƯỚNG DẪN (Dương iPhone)</li>
+            <h6>VIDEO HƯỚNG DẪN (Dương iPhone)</h6>
              <br>
              <br>
 			      <p style="text-align:center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/K0OMIW49NfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 &nbsp;
              <br>
 	     <br>		
-	    <li>HƯỚNG DẪN JAILBREAK IPHONE 5S BẰNG CHECKRA1N (Dương iPhone)</li>
+	    <h6>HƯỚNG DẪN JAILBREAK IPHONE 5S BẰNG CHECKRA1N (Dương iPhone)</h6>
 		<br>
 		<br>
 	         <p style="text-align:center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/vMx0wxu3Blk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
