--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -55,6 +55,7 @@ https://templatemo.com/tm-543-breezed
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Trang Chủ</a></li>
                             <li class="scroll-to-section"><a href="#about">Hướng dẫn tạo USB Checkra1n</a></li>
+                            <li class="scroll-to-section"><a href="#video">Video Hướng Dẫn</a></li>		
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -150,6 +151,11 @@ https://templatemo.com/tm-543-breezed
 				Và thế là xong!
 			    <br>
              <br>
+				          <section class="section" id="video">
+        <div class="container">
+            <div class="row">
+                    <div class="left-text-content">
+                        <div class="section-heading">
             <h6>VIDEO HƯỚNG DẪN (Dương iPhone)</h6>
              <br>
              <br>
