--- a/jailbreak/NDKStore/NDK.html
+++ b/jailbreak/NDKStore/NDK.html
@@ -22,7 +22,7 @@
 <script src="rotate.js" id="customerLandscape" isHorrizontal="0" charset="UTF-8"></script>
 
  <center>      
-             <p style="text-align:center;"><img src="https://ndk-jailbreak.github.io/CydiaIcon.png"style="width:80%;height:auto;">
+             <p style="text-align:center;"><img src="https://ndk-jailbreak.github.io/info/System/Images/Repo.png"style="width:80%;height:auto;">
 
 </div>
 
