--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ https://templatemo.com/tm-543-breezed
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="NDK/css/bootstrap.min.css">
 
+    <link rel="stylesheet" type="text/css" href="NDK/css/animation.css">
+    
     <link rel="stylesheet" type="text/css" href="NDK/css/font-awesome.css">
 
     <link rel="stylesheet" href="NDK/css/style.css">
