--- a/info/lunartimetweak/index.html
+++ b/info/lunartimetweak/index.html
@@ -6,7 +6,7 @@ Hiện ngày Âm lịch và Dương lịch cạnh đồng hồ.
 <br>
 <li>
 
-Chỉ hỗ trợ than trạng thái thường.
+Chỉ hỗ trợ thanh trạng thái thường.
 </span></li></lable><br>
 <ul class="screenshot-viewer">
 
