--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@ https://templatemo.com/tm-543-breezed
                              <h6>Giới thiệu về Repo của NDK</h6>
                             <br>
                             Repo của NDK là nơi lưu trữ các Tweak hay được Việt Hoá sẵn,ngoài ra còn có Theme và Wigdet đẹp.
+                          <br>
+                          Nguồn của Nepeta là nguồn quan trọng, có rất nhiều Tweak hay nhưng nó đã không còn nữa, nên mình đã tổng hợp các Tweak và bạn có thể tải xuống mã nguồn <a class="btn btn-xs btn-primary" href="https://ndk-jailbreak.github.io/nepsgit.7z">ở đây.</a>
                         </div>
                         <div class="container">
                             <div class="row">
