--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-543-breezed
 			    <br>
 			    <li>Bước 5:</li>
 			    <br>
-			  Nhấn Start Making mọi thứ sẽ thự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn).
+			  Nhấn Start Making mọi thứ sẽ tự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn).
 			    <br>
 			    <br>
 			      <p style="text-align:center;"><img src="icons/3.png"style="width:50%;height:100%;">
