--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@ https://templatemo.com/tm-543-breezed
                           Nguồn của Nepeta là nguồn quan trọng, có rất nhiều Tweak hay nhưng nó đã không còn nữa, nên mình đã tổng hợp các Tweak và bạn có thể tải xuống mã nguồn ở đây.
                           <br>
                           <p style="text-align:center;"><a class="btn btn-xs btn-primary" href="https://ndk-jailbreak.github.io/nepsgit.7z">Nepeta Tweak</a>
+                          <br>
+                            Mã MD5Sum: 95f3123443fc0178973c9c648b24af10
                         </div>
                         <div class="container">
                             <div class="row">
