--- a/info/Iconrepo/index.html
+++ b/info/Iconrepo/index.html
@@ -24,7 +24,7 @@ Tạo bởi Ông Cễnh
 
 <li>
 
-Phát hành lần đầu.
+Cập nhật icon cho các Tweak của Nepeta.
 
 </li>
 
@@ -32,7 +32,7 @@ Phát hành lần đầu.
 
 <tr><td>Phiên bản</td><td>
 
-1.1
+2.1
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
