--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ https://templatemo.com/tm-543-breezed
                           <p style="text-align:center;"><a class="btn btn-xs btn-primary" href="https://ndk-jailbreak.github.io/nepsgit.7z">Nepeta Tweak</a>
                           <br>
                             Mã MD5Sum: 95f3123443fc0178973c9c648b24af10
+                          <br>
+                          Pass Giải Nén: nepetatweakndkrepo  
                         </div>
                         <div class="container">
                             <div class="row">
