--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -104,11 +104,11 @@ https://templatemo.com/tm-543-breezed
                             <br>
                             <h6>Hướng dẫn tạo USB Checkra1n</h6>
                             <br>
-                            <li>Bước 1:</li>
+                            <li>·Bước 1:</li>
 		            <br>
-   				-Tải phần mềm 3uTools và phiên bản Checkra1n phù hợp với iPhone của bạn (lưu ý: Checkra1n chỉ hỗ trợ từ iPhone 5s-X iOS 12.0-14.7). 
+   				Tải phần mềm 3uTools và phiên bản Checkra1n phù hợp với iPhone của bạn (lưu ý: Checkra1n chỉ hỗ trợ từ iPhone 5s-X iOS 12.0-14.7). 
 			    <br>
-				-Đối với iPhone 5s và các dòng máy iPad chạy chip A7 thì sử dụng bản 0.10.2
+				Đối với iPhone 5s và các dòng máy iPad chạy chip A7 thì sử dụng bản 0.10.2
 				<br>
 				<br>
 			     <a href="http://3u.com/" class="btn">Link Tải 3uTools</a>
@@ -120,7 +120,7 @@ https://templatemo.com/tm-543-breezed
 			    <br>
 		 	    <br>
 			    <br>
-			    <li>Bước 2:</li>
+			    <li>·Bước 2:</li>
 		            <br>
                                 Mở phần mềm 3uTools và chọn vào phần Hộp Công Cụ sau đó chọn Jailbreak như ảnh.
 			    <br>
@@ -128,19 +128,19 @@ https://templatemo.com/tm-543-breezed
                               <p style="text-align:center;"><img src="icons/1.png"style="width:40%;height:20%;">              
 			    <br>
 			    <br>
-			    <li>Bước 3:</li>
+			    <li>·Bước 3:</li>
 		            <br>
                                 Một hộp thoại hiện lên sau đó chọn Checkra1n.
                             <br>
 			    <br>
                               <p style="text-align:center;"><img src="icons/2.png"style="width:40%;height:20%;">
 			    <br>
-				<li>Bước 4:</li>
+			    <li>·Bước 4:</li>
 		            <br>
 			    Chọn USB của bạn và chọn file ISO Checkra1n (nếu cần thiết).
 			    <br>
 			    <br>
-			    <li>Bước 5:</li>
+			    <li>·Bước 5:</li>
 			    <br>
 			  Nhấn Start Making mọi thứ sẽ tự động chạy (lưu ý: nó sẽ xóa hết dữ liệu trên USB của bạn).
 			    <br>
@@ -148,7 +148,7 @@ https://templatemo.com/tm-543-breezed
 			      <p style="text-align:center;"><img src="icons/3.png"style="width:50%;height:100%;">
 			    <br>
 			    <br>
-				Và thế là xong!
+				      <b>Và thế là xong!</b>
 			    <br>
              <br>
 				          <section class="section" id="video">
