--- a/index.html
+++ b/index.html
@@ -165,31 +165,31 @@ https://templatemo.com/tm-543-breezed
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
-                <a href="https://drive.google.com/file/d/1u3L8Yi8q0_m3VP72iE-MhS7GPn4JOOsH/view?fbclid=IwAR2ym1uxfUiNDX6qZgopVx-hQEusmYoSwuQUKkbLyUX-tpPHvTBJ4snVXlE" class="btn">Fugu14</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/fugu.html" class="btn">Fugu14</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/checkra1n" class="btn">Checkra1n for Android</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/checkra1nandroid.html" class="btn">Checkra1n for Android</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/uncover" class="btn">Xoá Jailbreak trên Unc0ver</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/unc0ver.html" class="btn">Xoá Jailbreak trên Unc0ver</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/idevice_ota" class="btn">Chặn Cập Nhật OTA</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/ota.html" class="btn">Chặn Cập Nhật OTA</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/pc-tool" class="btn">Tools Jailbreak</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/tool.html" class="btn">Tools Jailbreak</a>
                 &nbsp;
-                <a href="https://github.com/ongcenh/ongcenh.github.io/raw/master/TQM/Tools/chplay.mobileconfig" class="btn">CH Play</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/chplay.html" class="btn">CH Play</a>
                 &nbsp;
-               <a href="https://ongcenh.github.io/TQM/jb-tool" class="btn">Link Jailbreak</a>
+               <a href="https://ndk-jailbreak.github.io/redirect/jb.html" class="btn">Link Jailbreak</a>
                 &nbsp;
-               <a href="https://totally-not.spyware.lol" class="btn">JB Me 10</a>
+               <a href="https://ndk-jailbreak.github.io/redirect/jb10.html" class="btn">JB Me 10</a>
                 &nbsp;
-               <a href="https://jbme.qwertyoruiop.com/fb.html" class="btn">JB Me 9.3.X 64Bit</a>
+               <a href="https://ndk-jailbreak.github.io/redirect/jb9.html" class="btn">JB Me 9.3.X 64Bit</a>
                 &nbsp;
-                <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/TestFlight.plist"class="btn">TestFlight iOS 12</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/testflight.html"class="btn">TestFlight iOS 12</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/fixlib" class="btn">Fix lib iOS 9 - 10</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/fixlib.html" class="btn">Fix lib iOS 9 - 10</a>
                 &nbsp;
-                <a href="https://github.com/ongcenh/ongcenh.github.io/raw/master/TQM/Tools/oDin9.mobileconfig" class="btn">oDin 9</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/oDin9.html" class="btn">oDin 9</a>
                 &nbsp;
-                <a href="https://github.com/ongcenh/ongcenh.github.io/raw/master/TQM/Tools/oDin10.mobileconfig" class="btn">oDin 10</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/oDin10.html" class="btn">oDin 10</a>
                             </div>
                           </div>
                         </div>
@@ -208,17 +208,17 @@ https://templatemo.com/tm-543-breezed
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
-                <a href="https://mega.nz/file/kBwChTwT#FmiYqKt8aFX3qIxTvyGDeqibtMnkWt4MZXm0mBZ48RQ" class="btn">iPA Chiến Dịch Huyền Thoại</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/cdhtipa.html" class="btn">iPA Chiến Dịch Huyền Thoại</a>
                 &nbsp;
-                <a href="https://drive.google.com/file/d/1kfz5rPhnlUcB2FBpFaDImmkKY5572jfc/view?usp=drivesdk" class="btn">iPA Youtube Cercube</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/cercube.html" class="btn">iPA Youtube Cercube</a>
                 &nbsp;
-                <a href="https://drive.google.com/file/d/1hzqvnqEcNx5SDse-iJ8q_eB_raAqcZlr/view?usp=drivesdk/" class="btn">iPA Facebook Wolf</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/wolf.html" class="btn">iPA Facebook Wolf</a>
                 &nbsp;
-                <a href="https://drive.google.com/file/d/1xYaAvCgy62pF7MOY98aVYhHE-NJ8qPmL/view?usp=drivesdk" class="btn">iPA Messenger Shark</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/shark.html" class="btn">iPA Messenger Shark</a>
                 &nbsp;
-                <a href="https://drive.google.com/file/d/1eKuL3VQXhRTMdPEZrOO5v8hOBfFo2qCA/view?usp=drivesdk" class="btn">iPA Zalo 2</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/zalo2.html" class="btn">iPA Zalo 2</a>
                 &nbsp;
-                <a href="https://www.mediafire.com/file/j8n2ghzfmnw56nu/Chinese.bytes/file" class="btn">File Tiếng Việt Game CDHT</a>                  </section>
+                <a href="https://ndk-jailbreak.github.io/redirect/cdht.html" class="btn">File Tiếng Việt Game CDHT</a>                  </section>
     <!-- End Tool iDevice-->
     <!-- ***** Footer Start ***** -->
     <footer>
