--- a/jailbreak/index.html
+++ b/jailbreak/index.html
@@ -113,11 +113,11 @@ https://templatemo.com/tm-543-breezed
 				Đối với iPhone 5s và các dòng máy iPad chạy chip A7 thì sử dụng bản 0.10.2
 				<br>
 				<br>
-			     <a href="http://3u.com/" class="btn">Link Tải 3uTools</a>
+			     <a href="https://ndk-jailbreak.github.io/redirect/3utools.html" class="btn">Link Tải 3uTools</a>
                 &nbsp;
-			     <a href="https://github.com/asineth0/checkn1x/releases/tag/1.1.6" class="btn">Link Tải Checkra1n</a>
+			     <a href="https://ndk-jailbreak.github.io/redirect/checkn1x.html" class="btn">Link Tải Checkra1n</a>
                 &nbsp;
-			    <a href="https://www.dropbox.com/s/39far551iyvja6g/checkn1x-1.0.5-amd64_Checkra1n_0.10.2.iso?dl=0" class="btn">Link Tải Checkra1n 0.10.2</a>
+			    <a href="https://ndk-jailbreak.github.io/redirect/checkra1n.html" class="btn">Link Tải Checkra1n 0.10.2</a>
                 &nbsp;
 			    <br>
 		 	    <br>
@@ -193,29 +193,31 @@ https://templatemo.com/tm-543-breezed
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
-                <a href="https://ongcenh.github.io/TQM/checkra1n" class="btn">Checkra1n for Android</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/fugu.html" class="btn">Fugu14</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/uncover" class="btn">Xoá Jailbreak trên Unc0ver</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/checkra1nandroid.html" class="btn">Checkra1n for Android</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/idevice_ota" class="btn">Chặn Cập Nhật OTA</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/unc0ver.html" class="btn">Xoá Jailbreak trên Unc0ver</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/pc-tool" class="btn">Tools Jailbreak</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/ota.html" class="btn">Chặn Cập Nhật OTA</a>
                 &nbsp;
-                <a href="https://github.com/ongcenh/ongcenh.github.io/raw/master/TQM/Tools/chplay.mobileconfig" class="btn">CH Play</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/tool.html" class="btn">Tools Jailbreak</a>
                 &nbsp;
-               <a href="https://ongcenh.github.io/TQM/jb-tool" class="btn">Link Jailbreak</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/chplay.html" class="btn">CH Play</a>
                 &nbsp;
-               <a href="https://totally-not.spyware.lol" class="btn">JB Me 10</a>
+               <a href="https://ndk-jailbreak.github.io/redirect/jb.html" class="btn">Link Jailbreak</a>
                 &nbsp;
-               <a href="https://jbme.qwertyoruiop.com/fb.html" class="btn">JB Me 9.3.X 64Bit</a>
+               <a href="https://ndk-jailbreak.github.io/redirect/jb10.html" class="btn">JB Me 10</a>
                 &nbsp;
-        <a href="itms-services://?action=download-manifest&url=https://ongcenh.github.io/plist/TestFlight.plist"class="btn">TestFlight iOS 12</a>
+               <a href="https://ndk-jailbreak.github.io/redirect/jb9.html" class="btn">JB Me 9.3.X 64Bit</a>
                 &nbsp;
-                <a href="https://ongcenh.github.io/TQM/fixlib" class="btn">Fix lib iOS 9 - 10</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/testflight.html"class="btn">TestFlight iOS 12</a>
                 &nbsp;
-                <a href="https://github.com/ongcenh/ongcenh.github.io/raw/master/TQM/Tools/oDin9.mobileconfig" class="btn">oDin 9</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/fixlib.html" class="btn">Fix lib iOS 9 - 10</a>
                 &nbsp;
-                <a href="https://github.com/ongcenh/ongcenh.github.io/raw/master/TQM/Tools/oDin10.mobileconfig" class="btn">oDin 10</a>
+                <a href="https://ndk-jailbreak.github.io/redirect/oDin9.html" class="btn">oDin 9</a>
+                &nbsp;
+                <a href="https://ndk-jailbreak.github.io/redirect/oDin10.html" class="btn">oDin 10</a>
                             </div>
                           </div>
                         </div>
