--- a/info/weatherls/index.html
+++ b/info/weatherls/index.html
@@ -21,7 +21,7 @@ Hiện thời tiết và âm lịch trên màn hình khóa.
 
 <li>
 
-Cải tiến, sửa lỗi.
+Hỗ trợ thêm iOS 12.
 
 </li>
 
@@ -29,7 +29,7 @@ Cải tiến, sửa lỗi.
 
 <tr><td>Phiên bản</td><td>
 
-1.0
+1.1
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
@@ -44,7 +44,7 @@ Cải tiến, sửa lỗi.
 </td></tr>
 <tr><td>Hỗ trợ IOS</td><td>
 
-13.0 - 13.7
+12.0 - 13.7
 
 
 
