--- a/info/weatherls/index.html
+++ b/info/weatherls/index.html
@@ -18,32 +18,35 @@ Hiện thời tiết và âm lịch trên màn hình khóa.
   
 <li><a target="_blank" href="Screenshots/3.jpg?size=full">
 <img src="Screenshots/3.jpg?size=medium"/></a></li>
+  
+<li><a target="_blank" href="Screenshots/4.jpg?size=full">
+<img src="Screenshots/4.jpg?size=medium"/></a></li>
+  
+<li><a target="_blank" href="Screenshots/5.jpg?size=full">
+<img src="Screenshots/5.jpg?size=medium"/></a></li>
+  
+<li><a target="_blank" href="Screenshots/6.jpg?size=full">
+<img src="Screenshots/6.jpg?size=medium"/></a></li>
 
 </ul></panel-body></panel>
 <panel-header><label><panel style="margin-top: -14px;" class="modern changes-panel"><ttp class="name">Nội dung cập nhật</ttp></label></panel-header><panel-body style="margin-top: -10px;"><span class="change-content">
 
 <li>
-Thay đổi vị trí đồng hồ và thời tiết cho nhau.
+Fix lỗi không hoạt động trên ios 10. (Đã hỗ trợ luôn cho ios 10 của 32bit, bao gồm iphone 5 và 5c).
 </li>
 <li>
-Fix lỗi không nhảy số của đồng hồ khi phút hoặc giờ thay đổi.
-</li>
-<li>
-Tự điều chỉnh cỡ chữ cho máy màn hình nhỏ (5s và se), ngoài 2 thiết bị đó thì chữ sẽ mặc định lớn hơn.
-</li>
-<li>
-Giảm dung lượng khi cài đặt.
+Fix lỗi respring do bị đầy bộ nhớ trên các thiết bị.
 </li>
 </panel-body></panel> <panel class="modern info-panel"><panel-header><ttp class="name">Thông tin</ttp></panel-header><panel-body class="pb-0"><table style="margin-top: -20px;" class="information mt-1" cols="2" border="0"><tbody>
 
 <tr><td>Phiên bản</td><td>
 
-1.2
-
+2.0
+  
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-28/11/2021
+29/11/2021
 
 </td></tr>
 <tr><td>Dung lượng</td><td>
@@ -53,7 +56,7 @@ Giảm dung lượng khi cài đặt.
 </td></tr>
 <tr><td>Hỗ trợ IOS</td><td>
 
-12.0 - 13.7
+10.0 - 14.8.1
 
 
 
