--- a/info/nextmusic/index.html
+++ b/info/nextmusic/index.html
@@ -4,7 +4,7 @@
 Thông báo thông tin âm nhạc bằng một biểu ngữ nhỏ.
 
 </span></li></lable><br>
-
+<ul class="screenshot-viewer">
 
 
 </ul></panel-body></panel>
